# mozioapp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  sample._env
core/: models.py  serializers.py  tests.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20250729_0056.py  0003_auto_20250729_0123.py
mozioapp/: asgi.py  settings.py  settings_env__sample.py  urls.py  wsgi.py
