[project]
name = "mozio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.2",
    "django>=5.2.4",
    "djangorestframework>=3.16.0",
    "djangorestframework-gis>=1.2.0",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "psycopg2>=2.9.10",
    "pytest>=8.4.1",
]
